src/run/run_environment/gitlab_ci/snapshots/codspeed__run__run_environment__gitlab_ci__provider__tests__fork_merge_request_run_environment_metadata-2.snap
---
source: src/run/run_environment/gitlab_ci/provider.rs
expression: run_part
---
{
  "runId": "6957110437",
  "runPartId": "build-job",
  "jobName": "build-job",
  "metadata": {}
}
