src/run/run_environment/gitlab_ci/snapshots/codspeed__run__run_environment__gitlab_ci__provider__tests__push_main_provider_metadata.snap
---
source: src/run/run_environment/gitlab_ci/provider.rs
expression: run_environment_metadata
---
{
  "ref": "refs/heads/main",
  "headRef": null,
  "baseRef": "main",
  "owner": "owner",
  "repository": "repository",
  "event": "push",
  "sender": {
    "id": "1234567890",
    "login": "actor"
  },
  "ghData": null,
  "glData": {
    "runId": "1234567890",
    "job": "job"
  },
  "repositoryRootPath": "/builds/owner/repository"
}
