src/run/run_environment/gitlab_ci/snapshots/codspeed__run__run_environment__gitlab_ci__provider__tests__push_main_run_environment_metadata-2.snap
---
source: src/run/run_environment/gitlab_ci/provider.rs
expression: run_part
---
{
  "runId": "1234567890",
  "runPartId": "job",
  "jobName": "job",
  "metadata": {}
}
